--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <div class="navbar">
         <div class="amazon-logo border">
             <div class="logo"></div>
@@ -43,5 +44,15 @@
             <div class="return2">Cart</div>
         </div>
     </div>
+<div class="panel">
+ <div class="panel-menu">
+    <i class="fa-solid fa-bars"></i>
+    <div>All</div>
+ </div>
+
+
+</div>
+
+</header>
 </body>
 </html>
