worked with hero section

--- a/index.html
+++ b/index.html
@@ -49,10 +49,28 @@
     <i class="fa-solid fa-bars"></i>
     <div>All</div>
  </div>
+ <div class="panel-options">
+    <p>Today's Deals</p>
+    <p>Customer Service</p>
+    <p>Registry</p>
+    <p>Gift Cards</p>
+    <p>Sell</p>
+ </div>
 
 
 </div>
 
 </header>
+<div class="hero-section">
+
+    <div class="hero-image"></div>
+
+    <div class="hero-message">
+        <p>You are on Amazon.com. You can also shop on Amazon Nepal for millions of products with fast local delivery. <a href="#">Click here to go to amazon.np</a></p>
+    </div>
+</div>
+
+
+
 </body>
 </html>
