worked with the shop content and footer

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         </div>
     </div>
 <div class="panel">
- <div class="panel-menu">
+ <div class="panel-menu border">
     <i class="fa-solid fa-bars"></i>
     <div>All</div>
  </div>
  <div class="panel-options">
-    <p>Today's Deals</p>
-    <p>Customer Service</p>
-    <p>Registry</p>
-    <p>Gift Cards</p>
-    <p>Sell</p>
+    <p class="border">Today's Deals</p>
+    <p class="border">Customer Service</p>
+    <p class="border">Registry</p>
+    <p class="border">Gift Cards</p>
+    <p class="border">Sell</p>
  </div>
 
 
@@ -70,7 +70,130 @@
     </div>
 </div>
 
+<div class="content">
+    <div class="box">
+        <div class="box-content">
+            <h3>Electronics and Gadgets</h3>
+            <div class="content-img" style="background-image: url('photo1.jpg')";></div>
+            <p>See more</p></div>
+            </div>
+    <div class="box">
+        <div class="box-content">
+            <h3>Stationary Stuffs</h3>
+            <div class="content-img" style="background-image: url('photo2.jpg')";></div>
+            <p>See more</p>
+        </div>
+        </div>
+        
+    <div class="box"><div class="box-content">
+        <h3>Crockery</h3>
+        <div class="content-img" style="background-image: url('photo3.jpg')";></div>
+        <p>See more</p>
+    </div>
+   
+</div>
+    <div class="box"><div class="box-content">
+        <h3>Fashion and Style</h3>
+       <div class="content-img" style="background-image: url('photo4.jpg')";></div>
+       <p>See more</p>
+    </div>
+   
+</div>
+    <div class="box"><div class="box-content">
+        <h3>Wall photos and decoration</h3>
+        <div class="content-img" style="background-image: url('photo5.jpg')";></div>
+    </div>
+<p>See more</p>
+</div>
+    <div class="box"><div class="box-content">
+        <h3>Flower vase</h3>
+        <div class="content-img" style="background-image: url('photo6.jpg')";></div>
+        <p>See more</p>
+    </div>
 
+</div>
+    <div class="box"><div class="box-content">
+        <h3>Watch and Accessories</h3>
+        <div class="content-img" style="background-image: url('photo7.jpg')";></div>
+        <p>See more</p>
+    </div>
+   
+</div>
+    <div class="box"><div class="box-content">
+        <h3>Kitchen Stuffs</h3>
+        <div class="content-img" style="background-image: url('photo8.webp')";></div>
+        <p>See more</p>
+    </div>
+
+</div>
+    </div>
+    <footer>
+ <div class="foot-panel1">
+    Back to Top
+ </div>
+ <div class="foot-panel2">
+    <ul>
+        <p>Get to Know Us</p>
+        <a>Careers</a>
+        <a>Blog</a>
+        <a>About Amazon</a>
+        <a>Investor Relation</a>
+        <a>Amazon Devices</a>
+        <a>Amazon Science</a>
+
+    </ul>
+
+    <ul>
+        <p>Get to Know Us</p>
+        <a>Careers</a>
+        <a>Blog</a>
+        <a>About Amazon</a>
+        <a>Investor Relation</a>
+        <a>Amazon Devices</a>
+        <a>Amazon Science</a>
+
+    </ul>
+
+    <ul>
+        <p>Get to Know Us</p>
+        <a>Careers</a>
+        <a>Blog</a>
+        <a>About Amazon</a>
+        <a>Investor Relation</a>
+        <a>Amazon Devices</a>
+        <a>Amazon Science</a>
+
+    </ul>
+
+    <ul>
+        <p>Get to Know Us</p>
+        <a>Careers</a>
+        <a>Blog</a>
+        <a>About Amazon</a>
+        <a>Investor Relation</a>
+        <a>Amazon Devices</a>
+        <a>Amazon Science</a>
+
+    </ul>
+ </div>
+
+ <div class="foot-panel3">
+    <div class="logo"></div>
+ </div>
+
+ <div class="foot-panel4">
+    <div class="pages">
+        <a>Conditions of Use</a>
+        <a>Privacy Notice</a>
+        <a>Your Ads Privacy Choices</a>
+    </div>
+    <div class="copyright">
+        &copy; 1996-2025, Amazon.com, Inc. or its affiliates
+    </div>
+ </div>
+
+
+    </footer>
 
 </body>
 </html>
